Revision history for HTML::FormWidgets

         - Moved English hint text out of subclasses
         - Can provide absolute (+) class names as widget types

0.6.209  2009-08-14
         - Added POD widget type
         - Added _text attribute to Tree. Adds id to container div
         - Fixed undefined warning in Tree if no data
         - No longer calls markdown from localize
         - Label now localizes text then does markdown
         - Stopped Menu from sqealing about no value to inflate

0.5.200  27/06/2009
         - Changed key used to sign distro
         - Use Class::MOP in ensure_class_loaded

0.5.184  13/06/2009
         - Added more tests

0.4.179  08/06/2009
         - Fixed widths in paragraphs and tables

0.4.177  06/06/2009
         - Fixed bug in Paragraphs _split method

0.4.176  11/05/2009
         - Added docs for paragraphs and slider

0.4.171  27/04/2009
         - Fixed paragraph rendering bug
         - Improved testing idioms
         - Fixed missing seperator in Menu subclass
         - Added paragraph splitting to Paragraphs subclass
         - Fixed bug in arg expansion in localize
         - Fixed JS bug in group membership

0.4.156  09/03/2009
         - Debugged menu widget

0.3.141  11/03/2009
         - Added menu widget

0.3.137  22/02/2009
         - Dropped use of NEXT
         - Fixed bug in event handling in Rule
         - Improved quality of embeded Javascript

0.3.130  30/12/2008
         - Fixed tree widget

0.3.126  14/12/2008
         - Editable tables can now use textareas
         - Added Image subclass
         - Added Paragraphs subclass
         - Switched from base to parent

0.3.120  04/12/2008
         - Renamed ImageButton to Button. Now generates both kinds

0.2.112  03/12/2008
         - Added the hidden widget type
         - Made the build method smarter and less gross
         - Setting skip_groups to true in the build config skips the
         call to _group_fields

0.2.110  01/12/2008